# fast_rosbag_slice

./: CMakeLists.txt  README.md  package.xml
src/: fast_rosbag_slice.cpp
